force-app/main/default/objects/WGB_Outputs__c/WGB_Outputs__c.object-meta.xml
<CustomObject>
    <label>WGB Outputs</label>
    <nameField>
        <label>WGB Outputs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGB Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>