force-app/main/default/objects/WGB_Outputs__c/fields/Alarm__c.field-meta.xml
<CustomField>
    <fullName>Alarm__c</fullName>
    <label>Alarm</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>