force-app/main/default/objects/WGB_Outputs__c/fields/BackUpPowerSupply__c.field-meta.xml
<CustomField>
    <fullName>BackUpPowerSupply__c</fullName>
    <label>BackUpPowerSupply</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>