force-app/main/default/objects/WGB_Outputs__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>