force-app/main/default/objects/WGB_Outputs__c/fields/Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Enclosure__c</fullName>
    <label>Enclosure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>