force-app/main/default/objects/WGB_Outputs__c/fields/FlameSensor__c.field-meta.xml
<CustomField>
    <fullName>FlameSensor__c</fullName>
    <label>FlameSensor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>