force-app/main/default/objects/WGB_Outputs__c/fields/Heater__c.field-meta.xml
<CustomField>
    <fullName>Heater__c</fullName>
    <label>Heater</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>