force-app/main/default/objects/WGB_Outputs__c/fields/Lead_Time_30_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_30_Override__c</fullName>
    <label>Lead Time 30 Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>