force-app/main/default/objects/WGB_Outputs__c/fields/OA03__c.field-meta.xml
<CustomField>
    <fullName>OA03__c</fullName>
    <label>OA03</label>
    <length>100</length>
    <type>Text</type>
</CustomField>