force-app/main/default/objects/WGB_Outputs__c/fields/StandControl__c.field-meta.xml
<CustomField>
    <fullName>StandControl__c</fullName>
    <label>StandControl</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>