force-app/main/default/objects/WGB_Outputs__c/fields/Waste_Gas_Burner_Back_up_Power_Supply__c.field-meta.xml
<CustomField>
    <fullName>Waste_Gas_Burner_Back_up_Power_Supply__c</fullName>
    <label>Waste Gas Burner Back-up Power Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>