force-app/main/default/objects/WGB_Outputs__c/fields/Waste_Gas_Burner_Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Waste_Gas_Burner_Enclosure__c</fullName>
    <label>Waste Gas Burner Enclosure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>