force-app/main/default/objects/WGB_Outputs__c/fields/Waste_Gas_Burner_Flame_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Waste_Gas_Burner_Flame_Sensor__c</fullName>
    <label>Waste Gas Burner Flame Sensor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>