force-app/main/default/objects/WGB_Outputs__c/fields/WasteGasBurner__c.field-meta.xml
<CustomField>
    <fullName>WasteGasBurner__c</fullName>
    <label>WasteGasBurner</label>
    <referenceTo>WasteGasBurner__c</referenceTo>
    <relationshipLabel>WGB Outputs Relation Field</relationshipLabel>
    <relationshipName>WGB_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>