force-app/main/default/objects/WGB_Outputs__c/fields/X20__c.field-meta.xml
<CustomField>
    <fullName>X20__c</fullName>
    <label>X20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>