force-app/main/default/objects/WGB_Outputs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Time_10_Override__c</columns>
    <columns>Lead_Time_20_Override__c</columns>
    <columns>Lead_Time_30_Override__c</columns>
    <columns>Lead_Time_40_Override__c</columns>
    <columns>OA_Override__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>